--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   background-image: linear-gradient(
     135deg,
     rgba(13, 66, 178, 0) 15%,
-    #1c62d8 50%,
+    #0a347b 50%,
     rgba(13, 66, 178, 0) 80%
   );
   border-radius: 50%;
@@ -92,7 +92,7 @@
   background-image: linear-gradient(
     135deg,
     rgba(13, 66, 178, 0) 15%,
-    #1c62d8 50%,
+    #0a347b 50%,
     rgba(13, 66, 178, 0) 80%
   );
   border-radius: 50%;
@@ -147,7 +147,7 @@
   background-image: linear-gradient(
     135deg,
     rgba(13, 66, 178, 0) 15%,
-    #1c62d8 50%,
+    #0a347b 50%,
     rgba(13, 66, 178, 0) 80%
   );
   border-radius: 50%;
@@ -259,7 +259,7 @@
   background-image: linear-gradient(
     135deg,
     rgba(13, 66, 178, 0) 15%,
-    #1c62d8 50%,
+    #0a347b 50%,
     rgba(13, 66, 178, 0) 80%
   );
   border-radius: 50%;
@@ -332,7 +332,7 @@ td {
   background: rgb(63, 25, 139);
 
   margin: 10px 10px;
-  border-bottom: #0d42b2 3px solid;
+  border-bottom: #0c0c17 3px solid;
 }
 
 .contact-icon_button {
@@ -356,7 +356,7 @@ td {
   width: 34px;
   height: 34px;
   border-radius: 50%;
-  background: #0d42b2;
+  background: #0c0c17;
   z-index: 0;
 }
 
